--- a/nalissanarine.html
+++ b/nalissanarine.html
@@ -176,25 +176,24 @@ function Desserts() {
 }
 
 IceCreamDivs = [
-  '<div class="item"><p>Chocolate nutella icecream  <span class="price">$5</span><br /><small>nutella mixed with chocolate ice cream and Oreos to get a yummy flavor. Chocolate sprinkles are optional on top of the icecream.</small></p></div>',
-  '<div class="item"><p>Vanilla nutella icecream <span class="price">$7</span><br /><small>nutella mixed with vanilla icecream, Oreos, and chocolate chips. Hershey drizzle included on top and sprinkes of any choice</small></p></div>',
-  '<div class="item"><p>Coco and nuts for nutella<span class="price">$10</span><br /><small>nutella mixed with choclate and hershey choclate filling. Around the cone includes chopped nuts and chocolate drizzle.</small></p></div>',
+  '<div class="item onclick=this.classList.toggle("show-description")"><p>Chocolate nutella icecream  <span class="price">$5</span><br /><small>nutella mixed with chocolate ice cream and Oreos to get a yummy flavor. Chocolate sprinkles are optional on top of the icecream.</small></p></div>',
+  '<div class="item onclick=this.classList.toggle("show-description")"><p>Vanilla nutella icecream <span class="price">$7</span><br /><small>nutella mixed with vanilla icecream, Oreos, and chocolate chips. Hershey drizzle included on top and sprinkes of any choice</small></p></div>',
+  '<div class="item onclick=this.classList.toggle("show-description")"><p>Coco and nuts for nutella<span class="price">$10</span><br /><small>nutella mixed with choclate and hershey choclate filling. Around the cone includes chopped nuts and chocolate drizzle.</small></p></div>',
 ]
 
 ShakesDivs = [
-  '<div class="item"><p>nutella party<span class="price">$15</span><br /><small>nutella mixed with vanilla icecream and Hershey syrup.Topped with carmel popcorn to get an extra sweet taste. </small></p></div>',
-  '<div class="item"><p>Resess Nutella Pieces<span class="price">$15</span><br /><small>nutella mixed with vanilla icecream, carmel, and Hershey syrup. Crushed Resses Pieces around the cup and also on top</small></p></div>',
-  '<div class="item"><p>Just pretzelin shake<span class="price">$13</span><br /><small>regular nutella mixed chocolate covered pretzels to get a sweet and salty effect. Topped with whip cream and Hershey syrup.</small></p></div>',
+  '<div class="item onclick=this.classList.toggle("show-description")"><p>nutella party<span class="price">$15</span><br /><small>nutella mixed with vanilla icecream and Hershey syrup.Topped with carmel popcorn to get an extra sweet taste. </small></p></div>',
+  '<div class="item onclick=this.classList.toggle("show-description")"><p>Resess Nutella Pieces<span class="price">$15</span><br /><small>nutella mixed with vanilla icecream, carmel, and Hershey syrup. Crushed Resses Pieces around the cup and also on top</small></p></div>',
+  '<div class="item onclick=this.classList.toggle("show-description")"><p>Just pretzelin shake<span class="price">$13</span><br /><small>regular nutella mixed chocolate covered pretzels to get a sweet and salty effect. Topped with whip cream and Hershey syrup.</small></p></div>',
 ]
 
 DessertsDivs = [
-  '<div class="item"><p>nutella brownie<span class="price">$17</span><br /><small>melting nutella filled chocolate brownies.Very warm and soft. Topped with additonal more warm nutella </small></p></div>',
-  '<div class="item"><p>nutella in a mug <span class="price">$20</span><br /><small>Nutella pound cake all in a mug to get a right portion size for you.Topped with whip cream and vanilla icecream</small></p></div>',
-  '<div class="item"><p>no-maccing around<span class="price">$9</span><br /><small>10 nutella filled, chocolate maccarons. Every additional is $2 each</small></p></div>',
+  '<div class="item onclick=this.classList.toggle("show-description")"><p>nutella brownie<span class="price">$17</span><br /><small>melting nutella filled chocolate brownies.Very warm and soft. Topped with additonal more warm nutella </small></p></div>',
+  '<div class="item onclick=this.classList.toggle("show-description")"><p>nutella in a mug <span class="price">$20</span><br /><small>Nutella pound cake all in a mug to get a right portion size for you.Topped with whip cream and vanilla icecream</small></p></div>',
+  '<div class="item onclick=this.classList.toggle("show-description")"><p>no-maccing around<span class="price">$9</span><br /><small>10 nutella filled, chocolate maccarons. Every additional is $2 each</small></p></div>',
 ]
 
-  $('div').on('click', function() {
-      $(this).toggleClass('show-description');     
+  
   });
 </script>
 
