--- a/Medilab/nalissawebsite.html
+++ b/Medilab/nalissawebsite.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>behan Hill</title>
+  <title>Behan Hill</title>
   <meta name="description" content="Vet by behanhill.com">
   <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
@@ -34,7 +34,7 @@
 				        <span class="icon-bar"></span>
 				      </button>
 					<a href="index.html" class="navbar-brand">Behan hill</a>
-              <a class="navbar-brand" href="#"><img src="https://i.pinimg.com/originals/14/84/e3/1484e3fd7b08567adb7185d8fba3f21d.jpg" class="img-responsive" style="width: 10px; margin-top: -16px;"></a>
+              <a class="navbar-brand" href="#" style="width:50%"><img src="https://i.pinimg.com/originals/14/84/e3/1484e3fd7b08567adb7185d8fba3f21d.jpg" class="img-responsive" style="width: 50%; margin-top: -16px;"></a>
                                                                                                                                                      
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
