--- a/Medilab/nalissawebsite.html
+++ b/Medilab/nalissawebsite.html
@@ -33,7 +33,7 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				      </button>
-					<a href="index.html" class="navbar-brand">Behan hill</a>
+					<a href="index.html" class="navbar-brand">Behan</a>
               <a class="navbar-brand" href="#" style="width:25%; float:left"><img src="https://i.pinimg.com/originals/14/84/e3/1484e3fd7b08567adb7185d8fba3f21d.jpg" class="img-responsive" style="width: 25%; margin-top: -16px; border-radius: 50px; float:left"></a>
                                                                                                                                                      
             </div>
