--- a/Medilab/nalissawebsite.html
+++ b/Medilab/nalissawebsite.html
@@ -33,8 +33,8 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				      </button>
-					<a href="index.html" class="navbar-brand">Beha</a>
-              <a class="navbar-brand" href="#" style="width:25%;"><img src="https://i.pinimg.com/originals/14/84/e3/1484e3fd7b08567adb7185d8fba3f21d.jpg" class="img-responsive" style="width: 25%; margin-top: -16px; border-radius: 50px"></a>
+					<a href="index.html" class="navbar-brand" style="font-size:3em">Behan Hill</a>
+              <a class="navbar-brand" href="#" style="width:40%;"><img src="https://i.pinimg.com/originals/14/84/e3/1484e3fd7b08567adb7185d8fba3f21d.jpg" class="img-responsive" style="width: 40%; margin-top: -16px; border-radius: 50px"></a>
                                                                                                                                                      
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
