--- a/Nalissa Narine/Nalissaindex.html
+++ b/Nalissa Narine/Nalissaindex.html
@@ -6,13 +6,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/Nalissa Narine/style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
     <div id="cat">
     </div>
-    <script src="sketch.js"></script>
+    <script src="/Nalissa Narine/sketch.js"></script>
   </body>
 </html>
